--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.28.0",
+    "eslint-config-next": "^14.1.0",
+    "next": "^14.1.0",
+    "next-sanity": "^7.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sanity": "^3.28.0",
+    "styled-components": "^6.1.8",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
