--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "eslint-config-next": "^14.1.0",
     "next": "^14.1.0",
     "next-sanity": "^7.1.4",
+    "next-sanity-image": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.28.0",
+    "sanity-plugin-icon-picker": "^3.3.0",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.5"
   },
