--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-sanity-image": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-autocomplete": "^2.7.3",
     "sanity": "^3.28.0",
     "sanity-plugin-icon-picker": "^3.3.0",
     "styled-components": "^6.1.8",
