admin panel half way

--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@heroicons/react": "^2.1.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.28.0",
+    "axios": "^1.6.7",
+    "distance-matrix-2": "^1.1.0",
     "eslint-config-next": "^14.1.0",
     "next": "^14.1.0",
     "next-sanity": "^7.1.4",
     "next-sanity-image": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-autocomplete": "^2.7.3",
     "sanity": "^3.28.0",
     "sanity-plugin-icon-picker": "^3.3.0",
     "styled-components": "^6.1.8",
