--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.28.0",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "distance-matrix-2": "^1.1.0",
     "eslint-config-next": "^14.1.0",
+    "mongoose": "^8.2.0",
     "next": "^14.1.0",
+    "next-auth": "^4.24.6",
     "next-sanity": "^7.1.4",
     "next-sanity-image": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^2.12.1",
     "sanity": "^3.28.0",
     "sanity-plugin-icon-picker": "^3.3.0",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.5",
+    "use-debounce": "^10.0.0",
     "use-google-maps-script": "^0.1.2",
     "use-places-autocomplete": "^4.0.1"
   },
