--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eslint-config-next": "^14.1.0",
     "mongoose": "^8.2.0",
     "next": "^14.1.0",
-    "next-auth": "^4.24.6",
+    "next-auth": "^5.0.0-beta.13",
     "next-sanity": "^7.1.4",
     "next-sanity-image": "^6.1.1",
     "react": "^18.2.0",
