--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@elasticemail/elasticemail-client-ts-axios": "^4.0.22",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@sanity/image-url": "^1.0.2",
@@ -35,6 +36,7 @@
     "use-debounce": "^10.0.0",
     "use-google-maps-script": "^0.1.2",
     "use-places-autocomplete": "^4.0.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
